--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="theme-color"
+      content="#F3F6F9"
+      media="(prefers-color-scheme: light)"
     />
-    <title>Simple Dimple</title>
+    <meta
+      name="theme-color"
+      content="#001E3C"
+      media="(prefers-color-scheme: dark)"
+    />
+    <meta name="description" content="Симпл Димпл, нет Поп Ит" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Emma Stone</title>
   </head>
   <body>
     <div id="root"></div>
