--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="theme-color"
-      content="#001E3C"
+      content="#212121"
       media="(prefers-color-scheme: dark)"
     />
     <meta name="description" content="Симпл Димпл, нет Поп Ит" />
