--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="theme-color"
-      content="#F3F6F9"
+      content="#f5f5f5"
       media="(prefers-color-scheme: light)"
     />
     <meta
